objects/L_R_Result_Summary__c.object
<CustomObject>
    <fields>
        <fullName>GIBU__c</fullName>
        <formula>TEXT(Participant_User__r.GIBU__c)</formula>
        <label>GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gained_Points_for_Exam_Participation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gained Points for Exam Participation</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gained_Points_for_Exam_Passed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gained Points for Exam Passed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gained_Points_for_Feedback_Given__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gained Points for Feedback Given</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gained_Points_for_Training_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gained Points for Training Attended</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Exam_Passed__c</fullName>
        <label>Number of Exam Passed</label>
        <summaryFilterItems>
            <field>Learning_Response_Result__c.Exam_Result__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Learning_Response_Result__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Participant with Response and Exam without Slots, Participant with Response Exam &amp; Date Slots</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Response_Result__c.Result_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Exam_Scheduled_for_User__c</fullName>
        <label>Number of Exam Scheduled for User</label>
        <summaryFilterItems>
            <field>Learning_Response_Result__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Participant with Response and Exam without Slots, Participant with Response Exam &amp; Date Slots</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Response_Result__c.Result_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Attended__c</fullName>
        <label>Number of Training Attended</label>
        <summaryFilterItems>
            <field>Learning_Response_Result__c.Status_of_Participant__c</field>
            <operation>notEqual</operation>
            <value>Invited for Training, Signed for Training</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Response_Result__c.Result_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Scheduled_for_User__c</fullName>
        <label>Number of Training Scheduled for User</label>
        <summaryForeignKey>Learning_Response_Result__c.Result_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Participant_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>L_R_Result_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Participant_User__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <label>Salesforce User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Rating_Status__c</fullName>
        <formula>IF(  Total_Star_Rating_Percentage_Gained__c &gt; 0.90, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E00000084ClM&quot;, &quot;5 Star&quot;),
       IF ( Total_Star_Rating_Percentage_Gained__c &gt; 0.80, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E00000084ClH&quot;,&quot;4 Star&quot;),
          IF ( Total_Star_Rating_Percentage_Gained__c &gt; 0.70,IMAGE(&quot;/servlet/servlet.FileDownload?file=015E00000084Ckn&quot;,&quot;3 Star&quot;),IF ( Total_Star_Rating_Percentage_Gained__c &gt; 0.60,IMAGE(&quot;/servlet/servlet.FileDownload?file=015E00000084Cl2&quot;,&quot;2 Star&quot;),IF ( Total_Star_Rating_Percentage_Gained__c &gt; 0.50,IMAGE(&quot;/servlet/servlet.FileDownload?file=015E00000084Ckd&quot;,&quot;1 Star&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015E00000084Cks&quot;,&quot;0 Star&quot;))))))</formula>
        <label>Star Rating Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Vertical__c</fullName>
        <formula>TEXT( Participant_User__r.Sub_Vertical__c )</formula>
        <label>Sub Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Network_ID__c</fullName>
        <formula>Participant_User__r.Te_Network_Id__c</formula>
        <label>TE Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Exam_Participation_Point__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Exam Participation Point</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Exam_Passed_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Exam Passed Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Feedback_Given_Point__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Feedback Given Point</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points_for_Training_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Points for Training Attended</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Star_Rating_Percentage_Gained__c</fullName>
        <formula>(( Gained_Points_for_Exam_Participation__c +  Gained_Points_for_Exam_Passed__c +  Gained_Points_for_Feedback_Given__c +  Gained_Points_for_Training_Attended__c)/( Total_Exam_Participation_Point__c + Total_Exam_Passed_Points__c + Total_Feedback_Given_Point__c + Total_Points_for_Training_Attended__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Star Rating Percentage Gained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_Exam_Participated_Percentage__c</fullName>
        <formula>Gained_Points_for_Exam_Participation__c  /  Total_Exam_Participation_Point__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Exam Participated Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_s_Exam_Passed_Percentage__c</fullName>
        <formula>Gained_Points_for_Exam_Passed__c  /  Total_Exam_Passed_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Exam Passed Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_s_Feedback_Provided_Percentage__c</fullName>
        <formula>Gained_Points_for_Feedback_Given__c  /  Total_Feedback_Given_Point__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Feedback Provided Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_s_Training_Attended_Percentage__c</fullName>
        <formula>Gained_Points_for_Training_Attended__c  /  Total_Points_for_Training_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Training Attended Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>L&amp;R Result Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Participant_User__c</columns>
        <columns>Star_Rating_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Sub_Vertical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>L&amp;R Result Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>L&amp;R Result Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>